🟨feat: update benchmarks.ipynb

--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -50,6 +50,8 @@
     "\n",
     "from causalml.inference.meta.slearner import BaseSClassifier as CausalSoloModel\n",
     "from causalml.inference.meta.tlearner import BaseTClassifier as CausalTwoModels\n",
+    "from causalml.inference.tree import UpliftTreeClassifier\n",
+    "from causalml.inference.tree import UpliftRandomForestClassifier\n",
     "\n",
     "from upninja.pipelines import DataTransformers\n",
     "from upninja.pipelines import BasePipeline\n",
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "51b2017a-e1d8-4b6b-a204-eb98b2b68e56",
    "metadata": {},
    "outputs": [],
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "436a250f-b85e-4e04-9a6f-67c8b84176e6",
    "metadata": {},
    "outputs": [
@@ -309,8 +311,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>KNearestSklearn</td>\n",
-       "      <td>0.020627</td>\n",
-       "      <td>1.482143</td>\n",
+       "      <td>0.020528</td>\n",
+       "      <td>1.523734</td>\n",
        "      <td>0.847366</td>\n",
        "      <td>0.553325</td>\n",
        "      <td>0.017513</td>\n",
@@ -318,8 +320,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>TreeClassifierSklearn</td>\n",
-       "      <td>0.042022</td>\n",
-       "      <td>0.012076</td>\n",
+       "      <td>0.046126</td>\n",
+       "      <td>0.011746</td>\n",
        "      <td>0.853058</td>\n",
        "      <td>0.599789</td>\n",
        "      <td>0.000000</td>\n",
@@ -327,17 +329,17 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>RandomForestSklearn</td>\n",
-       "      <td>1.395977</td>\n",
-       "      <td>0.103046</td>\n",
+       "      <td>1.503427</td>\n",
+       "      <td>0.115366</td>\n",
        "      <td>0.853058</td>\n",
-       "      <td>0.615059</td>\n",
+       "      <td>0.615945</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>LogisticRregressionSklearn</td>\n",
-       "      <td>1.865285</td>\n",
-       "      <td>0.024664</td>\n",
+       "      <td>2.123291</td>\n",
+       "      <td>0.034295</td>\n",
        "      <td>0.853058</td>\n",
        "      <td>0.627490</td>\n",
        "      <td>0.000000</td>\n",
@@ -345,8 +347,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>GradientBoostingCatBoost</td>\n",
-       "      <td>2.844391</td>\n",
-       "      <td>0.021228</td>\n",
+       "      <td>3.591814</td>\n",
+       "      <td>0.025102</td>\n",
        "      <td>0.853036</td>\n",
        "      <td>0.613629</td>\n",
        "      <td>0.001819</td>\n",
@@ -357,21 +359,21 @@
       ],
       "text/plain": [
        "                   model_name  fit_time  score_time  test_accuracy  \\\n",
-       "1             KNearestSklearn  0.020627    1.482143       0.847366   \n",
-       "2       TreeClassifierSklearn  0.042022    0.012076       0.853058   \n",
-       "3         RandomForestSklearn  1.395977    0.103046       0.853058   \n",
-       "0  LogisticRregressionSklearn  1.865285    0.024664       0.853058   \n",
-       "4    GradientBoostingCatBoost  2.844391    0.021228       0.853036   \n",
+       "1             KNearestSklearn  0.020528    1.523734       0.847366   \n",
+       "2       TreeClassifierSklearn  0.046126    0.011746       0.853058   \n",
+       "3         RandomForestSklearn  1.503427    0.115366       0.853058   \n",
+       "0  LogisticRregressionSklearn  2.123291    0.034295       0.853058   \n",
+       "4    GradientBoostingCatBoost  3.591814    0.025102       0.853036   \n",
        "\n",
        "   test_roc_auc   test_f1  \n",
        "1      0.553325  0.017513  \n",
        "2      0.599789  0.000000  \n",
-       "3      0.615059  0.000000  \n",
+       "3      0.615945  0.000000  \n",
        "0      0.627490  0.000000  \n",
        "4      0.613629  0.001819  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,101 +574,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2a3ddf8b-82c9-420a-b726-9d04ae4cd183",
+   "execution_count": 5,
+   "id": "e218dc02-9f32-4743-9488-b89baf79b614",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s_learner_model = CausalSoloModel(CatBoostClassifier(logging_level='Silent'))\n",
+    "with open('saved_models/best_base/cb.pkl', 'rb') as f:\n",
+    "    cb_best = pickle.load(f)\n",
+    "cb_best['best_params']['logging_level'] = 'Silent'\n",
+    "\n",
+    "s_learner_model = CausalSoloModel(CatBoostClassifier(**cb_best['best_params']))\n",
     "\n",
     "s_learner_pipeline = BasePipeline.BasePipeline([\n",
     "    ('hilstrom-transformer', DataTransformers.HillstromTransformer()),\n",
     "    ('slearner', s_learner_model)\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24e92837-173c-413b-bdd9-de6e84f1074b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
+    "])\n",
     "\n",
-    "s_learner_pipeline.fit(X_train, y_train, t_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "304c1ac7-c3ac-4682-ae55-e9b72000eaf0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "two_models_model = CausalTwoModels(\n",
-    "    CatBoostClassifier(logging_level='Silent'),\n",
-    "    CatBoostClassifier(logging_level='Silent')\n",
+    "# независимые модели\n",
+    "two_models_undepended_model = CausalTwoModels(\n",
+    "    CatBoostClassifier(**cb_best['best_params']),\n",
+    "    CatBoostClassifier(**cb_best['best_params'])\n",
     ")\n",
     "\n",
-    "two_models_pipeline = BasePipeline.BasePipeline([\n",
+    "two_models_undepended_pipeline = BasePipeline.BasePipeline([\n",
     "    ('hilstrom-transformer', DataTransformers.HillstromTransformer()),\n",
-    "    ('two-models', two_models_model)\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06c0255a-7370-403b-82cd-07ad6e0717df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
+    "    ('two-models-undepended', two_models_undepended_model)\n",
+    "])\n",
     "\n",
-    "two_models_pipeline.fit(X_train, y_train, t_train)"
+    "# Uplift деревья\n",
+    "uplift_tree = UpliftTreeClassifier(max_depth = 4,\n",
+    "                                   min_samples_leaf = 200,\n",
+    "                                   min_samples_treatment = 50,\n",
+    "                                   n_reg = 100,\n",
+    "                                   evaluationFunction='KL',\n",
+    "                                   control_name='control')\n",
+    "\n",
+    "uplift_tree_pipeline = BasePipeline.BasePipeline([\n",
+    "    ('hilstrom-transformer', DataTransformers.HillstromTransformer()),\n",
+    "    ('uplift-tree', uplift_tree)\n",
+    "])\n",
+    "\n",
+    "# Uplift лес\n",
+    "# uplift_forest = UpliftRandomForestClassifier(n_estimators=5,\n",
+    "#                                              max_depth=5,\n",
+    "#                                              min_samples_leaf=200,\n",
+    "#                                              min_samples_treatment=50,\n",
+    "#                                              n_reg=100,\n",
+    "#                                              evaluationFunction='KL',\n",
+    "#                                              control_name='control')\n",
+    "\n",
+    "# uplift_forest_pipeline = BasePipeline.BasePipeline([\n",
+    "#     ('hilstrom-transformer', DataTransformers.HillstromTransformer()),\n",
+    "#     ('uplift-forest', uplift_forest)\n",
+    "# ])\n",
+    "\n",
+    "# соберем словарь для скоринга\n",
+    "pipelines_unfited = {\n",
+    "    'slearner': s_learner_pipeline,\n",
+    "    'two-models-undepended': two_models_undepended_pipeline,\n",
+    "    'uplift-treeCausal': uplift_tree_pipeline\n",
+    "    # 'uplift-forest-treeCausal': uplift_forest_pipeline\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b4aa92f7-15a0-4263-a3da-e21ba0864bbe",
+   "execution_count": 6,
+   "id": "e4ffc950-877d-4bfc-bf77-a7b0532148c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_w_preds = (\n",
-    "    ('s-learner', s_learner_pipeline.predict(X_test).flatten()),\n",
-    "    ('two-models', two_models_pipeline.predict(X_test).flatten())\n",
-    ")"
+    "res = scorePipelines(pipelines_unfited,\n",
+    "                     X_train, y_train,\n",
+    "                     X_test, y_test,\n",
+    "                     t_train, t_test\n",
+    "                    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84cbd9d4-1847-469e-ad29-902da9a4b864",
+   "execution_count": 7,
+   "id": "b9fa8d8c-ff04-4507-929d-b4074c7b32ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>fit_time</th>\n",
+       "      <th>score_time</th>\n",
+       "      <th>weighted_average_uplift_test</th>\n",
+       "      <th>auqc_test</th>\n",
+       "      <th>auuq_test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>uplift-treeCausal</td>\n",
+       "      <td>0.283952</td>\n",
+       "      <td>0.045854</td>\n",
+       "      <td>0.066327</td>\n",
+       "      <td>0.021342</td>\n",
+       "      <td>0.012665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>slearner</td>\n",
+       "      <td>3.482134</td>\n",
+       "      <td>0.212114</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.265490</td>\n",
+       "      <td>-0.153391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>two-models-undepended</td>\n",
+       "      <td>4.121654</td>\n",
+       "      <td>0.198643</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.265490</td>\n",
+       "      <td>-0.153391</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              model_name  fit_time  score_time  weighted_average_uplift_test  \\\n",
+       "2      uplift-treeCausal  0.283952    0.045854                      0.066327   \n",
+       "0               slearner  3.482134    0.212114                           NaN   \n",
+       "1  two-models-undepended  4.121654    0.198643                           NaN   \n",
+       "\n",
+       "   auqc_test  auuq_test  \n",
+       "2   0.021342   0.012665  \n",
+       "0  -0.265490  -0.153391  \n",
+       "1  -0.265490  -0.153391  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "res = upliftComparingHist(\n",
-    "    model_name_1=models_w_preds[0][0],\n",
-    "    model_predictions_1=models_w_preds[0][1],\n",
-    "    model_name_2=models_w_preds[1][0],\n",
-    "    model_predictions_2=models_w_preds[1][1]\n",
-    ")"
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a9fee33-d6fa-4343-b221-2b4a862d36f8",
+   "execution_count": 25,
+   "id": "0524930b-b328-42d3-a41f-431bbcddf171",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fit time:  1.136803388595581\n",
+      "Score time:  1.8871386051177979\n",
+      "weighted_average_uplift_test nan\n",
+      "auqc_test -0.2654903525647612\n",
+      "auuq_test -0.15339137562549263\n"
+     ]
+    }
+   ],
    "source": [
-    "scoreUpliftAtK(\n",
-    "    models_w_preds,\n",
-    "    y_test,\n",
-    "    t_test\n",
-    ")"
+    "import time\n",
+    "\n",
+    "from sklift.metrics import weighted_average_uplift\n",
+    "from sklift.metrics import qini_auc_score\n",
+    "from sklift.metrics import uplift_auc_score\n",
+    "\n",
+    "\n",
+    "X_train_RF = DataTransformers.HillstromTransformer().fit_transform(X_train)\n",
+    "X_test_RF = DataTransformers.HillstromTransformer().fit_transform(X_test)\n",
+    "\n",
+    "t_train_RF = t_train.map({0: 'no-control', 1: 'control'})\n",
+    "t_test_RF = t_test.map({0: 'no-control', 1: 'control'})\n",
+    "\n",
+    "uplift_forest = UpliftRandomForestClassifier(n_estimators=5,\n",
+    "                                             max_depth=5,\n",
+    "                                             min_samples_leaf=200,\n",
+    "                                             min_samples_treatment=50,\n",
+    "                                             n_reg=100,\n",
+    "                                             evaluationFunction='KL',\n",
+    "                                             control_name='control')\n",
+    "\n",
+    "start_fit_time = time.time()\n",
+    "uplift_forest.fit(X_train_RF.values, t_train_RF.values, y_train.values)\n",
+    "print('Fit time: ', time.time() - start_fit_time)\n",
+    "\n",
+    "start_score_time = time.time()\n",
+    "scores = uplift_forest.predict(X_test_RF.values)\n",
+    "print('Score time: ', time.time() - start_fit_time)\n",
+    "\n",
+    "t_test_RF = t_test.copy()\n",
+    "\n",
+    "print('weighted_average_uplift_test', weighted_average_uplift(y_test.values, scores, t_test_RF.values, bins=10))\n",
+    "print('auqc_test', qini_auc_score(y_test.values, scores, t_test_RF.values))\n",
+    "print('auuq_test', uplift_auc_score(y_test.values, scores, t_test_RF.values))"
    ]
   }
  ],
