🟨feat: updated preprocessing section

--- a/x5-retailhero.ipynb
+++ b/x5-retailhero.ipynb
@@ -52,8 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.7 s, sys: 5.42 s, total: 25.2 s\n",
-      "Wall time: 27.5 s\n"
+      "CPU times: user 18.7 s, sys: 5.27 s, total: 23.9 s\n",
+      "Wall time: 26 s\n"
      ]
     }
    ],
@@ -65,6 +65,117 @@
     "purchases = pd.read_csv(os.path.join(DATA_PATH, 'purchases.csv'))\n",
     "train = pd.read_csv(os.path.join(DATA_PATH, 'uplift_train.csv'))\n",
     "test = pd.read_csv(os.path.join(DATA_PATH, 'uplift_test.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "19d35717-273b-47f6-bcb6-41e3b2d8fb85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 36.5 s, sys: 2.39 s, total: 38.9 s\n",
+      "Wall time: 39.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "product_cols = ['product_id', 'is_alcohol', 'is_own_trademark']\n",
+    "\n",
+    "purchases = purchases.merge(products[product_cols], \n",
+    "                            on='product_id',\n",
+    "                            how='left'\n",
+    "                           )\n",
+    "\n",
+    "purchases['transaction_datetime'] = pd.to_datetime(purchases['transaction_datetime'])\n",
+    "\n",
+    "# агрегаты по клиенту:\n",
+    "client_features = purchases.groupby('client_id').agg(\n",
+    "    n_transactions=('transaction_id', 'nunique'),\n",
+    "    sum_trn_sum=('trn_sum_from_iss', 'sum'),\n",
+    "    mean_trn_sum=('trn_sum_from_iss', 'mean'),\n",
+    "    sum_quantity=('product_quantity', 'sum'),\n",
+    "    alcohol_bought=('is_alcohol', 'sum'),\n",
+    "    own_trademark_bought=('is_own_trademark', 'sum'),\n",
+    "    n_unique_products=('product_id', 'nunique'),\n",
+    "    n_days_active=('transaction_datetime', lambda x: x.nunique()),\n",
+    "    last_transaction_days_ago=('transaction_datetime', lambda x: (pd.Timestamp('2019-03-18') - x).max().days)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "07eb3833-5ff5-417e-8b57-1fe48267e44a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_birthdate(client_id_str):\n",
+    "    if pd.isna(client_id_str):\n",
+    "        return pd.NaT\n",
+    "    s = str(client_id_str)[:6]\n",
+    "    if len(s) != 6 or not s.isdigit():\n",
+    "        return pd.NaT\n",
+    "    yy, mm, dd = s[:2], s[2:4], s[4:6]\n",
+    "    if mm in ('00', '99') or dd in ('00', '99'):\n",
+    "        return pd.NaT\n",
+    "    try:\n",
+    "        return pd.Timestamp(f'19{yy}-{mm}-{dd}')\n",
+    "    except ValueError:\n",
+    "        try:\n",
+    "            return pd.Timestamp(f'20{yy}-{mm}-{dd}')\n",
+    "        except ValueError:\n",
+    "            return pd.NaT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9676ee5d-0c78-43f7-babc-54ff1a648ad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.06 s, sys: 29.5 ms, total: 1.08 s\n",
+      "Wall time: 1.08 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "clients['first_issue_date'] = pd.to_datetime(clients['first_issue_date'])\n",
+    "clients['first_redeem_date'] = pd.to_datetime(clients['first_redeem_date'])\n",
+    "\n",
+    "clients['issue_ts'] = clients['first_issue_date'].map(pd.Timestamp.timestamp)\n",
+    "clients['redeem_ts'] = clients['first_redeem_date'].apply(\n",
+    "    lambda x: x.timestamp() if pd.notna(x) else np.nan\n",
+    ")\n",
+    "clients['redeem_issue_diff'] = clients['redeem_ts'] - clients['issue_ts']\n",
+    "birth_dates = clients['client_id'].apply(parse_birthdate)\n",
+    "clients['age'] = (pd.Timestamp('2019-03-18') - birth_dates).dt.days / 365.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e6547697-0623-4bd1-a99d-b443e16bd01e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# объединяем с агрегатами:\n",
+    "train_full = train.merge(clients, on='client_id', how='left')\n",
+    "train_full = train_full.merge(client_features, on='client_id', how='left')\n",
+    "\n",
+    "test_full = test.merge(clients, on='client_id', how='left')\n",
+    "test_full = test_full.merge(client_features, on='client_id', how='left')"
    ]
   }
  ],
