--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -80,8 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.8 s, sys: 5.32 s, total: 24.2 s\n",
-      "Wall time: 26.2 s\n"
+      "CPU times: user 19 s, sys: 5.58 s, total: 24.6 s\n",
+      "Wall time: 26.7 s\n"
      ]
     }
    ],
@@ -113,8 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 36.5 s, sys: 2.28 s, total: 38.7 s\n",
-      "Wall time: 39.4 s\n"
+      "CPU times: user 37.6 s, sys: 2.66 s, total: 40.3 s\n",
+      "Wall time: 41 s\n"
      ]
     }
    ],
@@ -179,8 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.06 s, sys: 30.1 ms, total: 1.09 s\n",
-      "Wall time: 1.09 s\n"
+      "CPU times: user 1.08 s, sys: 43.4 ms, total: 1.13 s\n",
+      "Wall time: 1.13 s\n"
      ]
     }
    ],
@@ -243,8 +243,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 330 ms, sys: 30.9 ms, total: 361 ms\n",
-      "Wall time: 360 ms\n"
+      "CPU times: user 355 ms, sys: 46.3 ms, total: 401 ms\n",
+      "Wall time: 402 ms\n"
      ]
     }
    ],
@@ -568,8 +568,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 29.3 s, sys: 365 ms, total: 29.7 s\n",
-      "Wall time: 3.29 s\n"
+      "CPU times: user 30.6 s, sys: 401 ms, total: 31 s\n",
+      "Wall time: 3.67 s\n"
      ]
     }
    ],
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "3aadf87a-5e6a-447b-831b-7294d29d1d00",
    "metadata": {},
    "outputs": [
@@ -947,12 +947,12 @@
    "id": "783f7038-3551-4ca0-98b7-34d3593ae980",
    "metadata": {},
    "source": [
-    "### Qini curve"
+    "### ⭐ Qini curve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "8398086a-3cba-49db-9646-fafd4c52b121",
    "metadata": {},
    "outputs": [
@@ -970,6 +970,52 @@
    "source": [
     "plot_qini_curve(y_val, uplift_val, treat_val, perfect=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d699558b-7bea-418b-9f38-46ddd8eabe79",
+   "metadata": {},
+   "source": [
+    "# ✅ Добавим функцию для оценки Uplift-а"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5d20444a-5965-435b-9f85-87a0bdb986be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def uplift_score(prediction, treatment, target, rate=0.3):\n",
+    "    \"\"\"\n",
+    "    Подсчет Uplift Score\n",
+    "    \"\"\"\n",
+    "    order = np.argsort(-prediction)\n",
+    "    treatment_n = int((treatment == 1).sum() * rate)\n",
+    "    treatment_p = target.iloc[order][treatment.iloc[order] == 1][:treatment_n].mean()\n",
+    "    control_n = int((treatment == 0).sum() * rate)\n",
+    "    control_p = target.iloc[order][treatment.iloc[order] == 0][:control_n].mean()\n",
+    "    score = treatment_p - control_p\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4381e9a8-ed94-4842-8359-30cef43985e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚩Baseline uplift-score:  0.05476429841098124\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('🚩Baseline uplift-score: ', uplift_score(uplift_val, treat_val, y_val))"
    ]
   }
  ],
