--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -78,16 +78,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f34f4703-e107-4bec-82df-79712cbe8af6",
-   "metadata": {},
-   "source": [
-    "# ✅ Загрузим X5 Retail Hero dataset"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0e580e07-51ac-4126-aa63-e6e98a220fa2",
    "metadata": {},
    "outputs": [],
@@ -97,143 +89,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c963e0c8-4c40-470d-a788-5e674e09355b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 18.6 s, sys: 5.65 s, total: 24.3 s\n",
-      "Wall time: 26.6 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "clients = pd.read_csv(os.path.join(DATA_PATH, 'clients.csv'))\n",
-    "products = pd.read_csv(os.path.join(DATA_PATH, 'products.csv'))\n",
-    "purchases = pd.read_csv(os.path.join(DATA_PATH, 'purchases.csv'))\n",
-    "train = pd.read_csv(os.path.join(DATA_PATH, 'uplift_train.csv'))\n",
-    "test = pd.read_csv(os.path.join(DATA_PATH, 'uplift_test.csv'))"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "f3b2ec48-25d5-414b-b822-fd5261d74a9c",
+   "id": "51a94f35-d880-4c6a-b712-a0098f562ea8",
    "metadata": {},
    "source": [
-    "## ⚒️ Препроцессинг X5 Retail Hero dataset"
+    "# ✅ Baseline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3dd1c4d5-bd4e-4aac-ad24-100fea15658a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 35.1 s, sys: 2.37 s, total: 37.5 s\n",
-      "Wall time: 38 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "product_cols = ['product_id', 'is_alcohol', 'is_own_trademark']\n",
-    "\n",
-    "purchases = purchases.merge(products[product_cols], \n",
-    "                            on='product_id',\n",
-    "                            how='left'\n",
-    "                           )\n",
-    "\n",
-    "purchases['transaction_datetime'] = pd.to_datetime(purchases['transaction_datetime'])\n",
-    "\n",
-    "# агрегаты по клиенту:\n",
-    "client_features = purchases.groupby('client_id').agg(\n",
-    "    n_transactions=('transaction_id', 'nunique'),\n",
-    "    sum_trn_sum=('trn_sum_from_iss', 'sum'),\n",
-    "    mean_trn_sum=('trn_sum_from_iss', 'mean'),\n",
-    "    sum_quantity=('product_quantity', 'sum'),\n",
-    "    alcohol_bought=('is_alcohol', 'sum'),\n",
-    "    own_trademark_bought=('is_own_trademark', 'sum'),\n",
-    "    n_unique_products=('product_id', 'nunique'),\n",
-    "    n_days_active=('transaction_datetime', lambda x: x.nunique()),\n",
-    "    last_transaction_days_ago=('transaction_datetime', lambda x: (pd.Timestamp('2019-03-18') - x).max().days)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "34d2c8b6-91f7-4f51-9c17-52a0071c6f1e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 492 ms, sys: 22.3 ms, total: 514 ms\n",
-      "Wall time: 515 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "clients['first_issue_date'] = pd.to_datetime(clients['first_issue_date'])\n",
-    "clients['first_redeem_date'] = pd.to_datetime(clients['first_redeem_date'])\n",
-    "\n",
-    "clients['issue_ts'] = clients['first_issue_date'].map(pd.Timestamp.timestamp)\n",
-    "clients['redeem_ts'] = clients['first_redeem_date'].apply(\n",
-    "    lambda x: x.timestamp() if pd.notna(x) else np.nan\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "a1547b7e-ac13-45b2-bb6d-32e55aebc26b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# объединяем с агрегатами:\n",
-    "train_full = train.merge(clients, on='client_id', how='left')\n",
-    "train_full = train_full.merge(client_features, on='client_id', how='left')\n",
-    "\n",
-    "test_full = test.merge(clients, on='client_id', how='left')\n",
-    "test_full = test_full.merge(client_features, on='client_id', how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "39cfc320-0350-4e80-9b5f-c654df31ac63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_full.to_csv(os.path.join(DATA_PATH, 'uplift_train_preproc.csv'))\n",
-    "test_full.to_csv(os.path.join(DATA_PATH, 'uplift_test_preproc.csv'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51a94f35-d880-4c6a-b712-a0098f562ea8",
-   "metadata": {},
-   "source": [
-    "## ⚙️ Baseline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "f744c9c4-657d-47f9-866e-871781e9e3b3",
    "metadata": {},
    "outputs": [
@@ -241,21 +106,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 301 ms, sys: 37.3 ms, total: 338 ms\n",
-      "Wall time: 338 ms\n"
+      "CPU times: user 236 ms, sys: 32.9 ms, total: 269 ms\n",
+      "Wall time: 269 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "train_full = pd.read_csv(os.path.join(DATA_PATH, 'uplift_train_preproc.csv'))\n",
-    "test_full = pd.read_csv(os.path.join(DATA_PATH, 'uplift_test_preproc.csv'))"
+    "train_full = pd.read_csv(os.path.join(DATA_PATH, 'train_full_preproc.csv'))\n",
+    "test_full = pd.read_csv(os.path.join(DATA_PATH, 'test_full_preproc.csv'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "69822b31-f856-496c-834c-9aad6d71d210",
    "metadata": {},
    "outputs": [
@@ -265,19 +130,19 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 200039 entries, 0 to 200038\n",
-      "Data columns (total 19 columns):\n",
+      "Data columns (total 20 columns):\n",
       " #   Column                     Non-Null Count   Dtype  \n",
       "---  ------                     --------------   -----  \n",
       " 0   Unnamed: 0                 200039 non-null  int64  \n",
       " 1   client_id                  200039 non-null  object \n",
       " 2   treatment_flg              200039 non-null  int64  \n",
       " 3   target                     200039 non-null  int64  \n",
-      " 4   first_issue_date           200039 non-null  object \n",
-      " 5   first_redeem_date          182493 non-null  object \n",
+      " 4   first_issue_date           200039 non-null  int64  \n",
+      " 5   first_redeem_date          200039 non-null  int64  \n",
       " 6   age                        200039 non-null  int64  \n",
-      " 7   gender                     200039 non-null  object \n",
+      " 7   gender                     200039 non-null  int64  \n",
       " 8   issue_ts                   200039 non-null  float64\n",
-      " 9   redeem_ts                  182493 non-null  float64\n",
+      " 9   redeem_ts                  200039 non-null  float64\n",
       " 10  n_transactions             200039 non-null  int64  \n",
       " 11  sum_trn_sum                200039 non-null  float64\n",
       " 12  mean_trn_sum               200039 non-null  float64\n",
@@ -287,8 +152,9 @@
       " 16  n_unique_products          200039 non-null  int64  \n",
       " 17  n_days_active              200039 non-null  int64  \n",
       " 18  last_transaction_days_ago  200039 non-null  int64  \n",
-      "dtypes: float64(5), int64(10), object(4)\n",
-      "memory usage: 29.0+ MB\n"
+      " 19  split                      200039 non-null  object \n",
+      "dtypes: float64(5), int64(13), object(2)\n",
+      "memory usage: 30.5+ MB\n"
      ]
     }
    ],
@@ -298,15 +164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "e296c46d-f341-4d30-b349-ae56f8901f99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['age',\n",
+       "['first_issue_date',\n",
+       " 'first_redeem_date',\n",
+       " 'age',\n",
+       " 'gender',\n",
        " 'issue_ts',\n",
+       " 'redeem_ts',\n",
        " 'n_transactions',\n",
        " 'sum_trn_sum',\n",
        " 'mean_trn_sum',\n",
@@ -318,7 +188,7 @@
        " 'last_transaction_days_ago']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "6017be36-5b6c-46e0-8149-fb4d76282723",
    "metadata": {},
    "outputs": [
@@ -363,8 +233,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>first_issue_date</th>\n",
+       "      <th>first_redeem_date</th>\n",
        "      <th>age</th>\n",
+       "      <th>gender</th>\n",
        "      <th>issue_ts</th>\n",
+       "      <th>redeem_ts</th>\n",
        "      <th>n_transactions</th>\n",
        "      <th>sum_trn_sum</th>\n",
        "      <th>mean_trn_sum</th>\n",
@@ -379,7 +253,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
+       "      <td>2.000390e+05</td>\n",
+       "      <td>2.000390e+05</td>\n",
        "      <td>200039.000000</td>\n",
+       "      <td>200039.000000</td>\n",
+       "      <td>2.000390e+05</td>\n",
        "      <td>2.000390e+05</td>\n",
        "      <td>200039.000000</td>\n",
        "      <td>200039.000000</td>\n",
@@ -393,8 +271,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>46.417329</td>\n",
        "      <td>1.515492e+09</td>\n",
+       "      <td>1.395803e+09</td>\n",
+       "      <td>46.417329</td>\n",
+       "      <td>-0.296547</td>\n",
+       "      <td>1.515492e+09</td>\n",
+       "      <td>1.530004e+09</td>\n",
        "      <td>20.120821</td>\n",
        "      <td>8398.786037</td>\n",
        "      <td>75.437531</td>\n",
@@ -407,8 +289,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>49.532475</td>\n",
        "      <td>1.759508e+07</td>\n",
+       "      <td>4.331806e+08</td>\n",
+       "      <td>49.532475</td>\n",
+       "      <td>0.737329</td>\n",
+       "      <td>1.759508e+07</td>\n",
+       "      <td>1.806356e+07</td>\n",
        "      <td>17.732130</td>\n",
        "      <td>8627.434880</td>\n",
        "      <td>34.422622</td>\n",
@@ -421,8 +307,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>-7491.000000</td>\n",
        "      <td>1.491330e+09</td>\n",
+       "      <td>-1.000000e+00</td>\n",
+       "      <td>-7491.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>1.491330e+09</td>\n",
+       "      <td>1.491904e+09</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -435,8 +325,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>34.000000</td>\n",
        "      <td>1.500656e+09</td>\n",
+       "      <td>1.510316e+09</td>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>1.500656e+09</td>\n",
+       "      <td>1.514645e+09</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>3096.000000</td>\n",
        "      <td>58.449771</td>\n",
@@ -449,8 +343,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>45.000000</td>\n",
        "      <td>1.510779e+09</td>\n",
+       "      <td>1.525336e+09</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.510779e+09</td>\n",
+       "      <td>1.530004e+09</td>\n",
        "      <td>15.000000</td>\n",
        "      <td>5996.000000</td>\n",
        "      <td>70.309524</td>\n",
@@ -463,8 +361,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>59.000000</td>\n",
        "      <td>1.529517e+09</td>\n",
+       "      <td>1.545776e+09</td>\n",
+       "      <td>59.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.529517e+09</td>\n",
+       "      <td>1.545776e+09</td>\n",
        "      <td>27.000000</td>\n",
        "      <td>10863.000000</td>\n",
        "      <td>85.626551</td>\n",
@@ -477,8 +379,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>1852.000000</td>\n",
        "      <td>1.552686e+09</td>\n",
+       "      <td>1.574212e+09</td>\n",
+       "      <td>1852.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.552686e+09</td>\n",
+       "      <td>1.574212e+09</td>\n",
        "      <td>320.000000</td>\n",
        "      <td>498973.000000</td>\n",
        "      <td>4427.000000</td>\n",
@@ -494,15 +400,25 @@
        "</div>"
       ],
       "text/plain": [
-       "                 age      issue_ts  n_transactions    sum_trn_sum  \\\n",
-       "count  200039.000000  2.000390e+05   200039.000000  200039.000000   \n",
-       "mean       46.417329  1.515492e+09       20.120821    8398.786037   \n",
-       "std        49.532475  1.759508e+07       17.732130    8627.434880   \n",
-       "min     -7491.000000  1.491330e+09        1.000000       0.000000   \n",
-       "25%        34.000000  1.500656e+09        8.000000    3096.000000   \n",
-       "50%        45.000000  1.510779e+09       15.000000    5996.000000   \n",
-       "75%        59.000000  1.529517e+09       27.000000   10863.000000   \n",
-       "max      1852.000000  1.552686e+09      320.000000  498973.000000   \n",
+       "       first_issue_date  first_redeem_date            age         gender  \\\n",
+       "count      2.000390e+05       2.000390e+05  200039.000000  200039.000000   \n",
+       "mean       1.515492e+09       1.395803e+09      46.417329      -0.296547   \n",
+       "std        1.759508e+07       4.331806e+08      49.532475       0.737329   \n",
+       "min        1.491330e+09      -1.000000e+00   -7491.000000      -1.000000   \n",
+       "25%        1.500656e+09       1.510316e+09      34.000000      -1.000000   \n",
+       "50%        1.510779e+09       1.525336e+09      45.000000       0.000000   \n",
+       "75%        1.529517e+09       1.545776e+09      59.000000       0.000000   \n",
+       "max        1.552686e+09       1.574212e+09    1852.000000       1.000000   \n",
+       "\n",
+       "           issue_ts     redeem_ts  n_transactions    sum_trn_sum  \\\n",
+       "count  2.000390e+05  2.000390e+05   200039.000000  200039.000000   \n",
+       "mean   1.515492e+09  1.530004e+09       20.120821    8398.786037   \n",
+       "std    1.759508e+07  1.806356e+07       17.732130    8627.434880   \n",
+       "min    1.491330e+09  1.491904e+09        1.000000       0.000000   \n",
+       "25%    1.500656e+09  1.514645e+09        8.000000    3096.000000   \n",
+       "50%    1.510779e+09  1.530004e+09       15.000000    5996.000000   \n",
+       "75%    1.529517e+09  1.545776e+09       27.000000   10863.000000   \n",
+       "max    1.552686e+09  1.574212e+09      320.000000  498973.000000   \n",
        "\n",
        "        mean_trn_sum   sum_quantity  alcohol_bought  own_trademark_bought  \\\n",
        "count  200039.000000  200039.000000   200039.000000         200039.000000   \n",
@@ -525,7 +441,7 @@
        "max          1364.000000     320.000000                 116.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,26 +452,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "2e37455e-bb3b-4841-ac1d-f39a44eb9019",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_full = train_full[baseline_selector]\n",
-    "y_full = train_full[target_name]\n",
-    "treat_full = train_full[treatment_name]\n",
+    "X_train_full = train_full[baseline_selector + ['split']]\n",
     "\n",
-    "X_test = test_full[[\n",
-    "    feat for feat in baseline_selector\n",
-    "         if feat not in ('target', 'treatment_flg', target_name, treatment_name)\n",
-    "]]\n",
-    "\n",
-    "X_train, X_val, y_train, y_val, treat_train, treat_val = train_test_split(\n",
-    "    X_train_full, y_full, treat_full,\n",
-    "    test_size=0.2,\n",
-    "    random_state=SEED,\n",
-    "    stratify=treat_full.astype(str) + y_full.astype(str)\n",
-    ")\n",
+    "X_train = X_train_full[X_train_full.split.eq('train')].drop(['split'], axis=1)\n",
+    "X_val = X_train_full[X_train_full.split.eq('valid')].drop(['split'], axis=1)\n",
+    "y_train = train_full[X_train_full.split.eq('train')][target_name]\n",
+    "y_val = train_full[X_train_full.split.eq('valid')][target_name]\n",
+    "treat_train = train_full[X_train_full.split.eq('test')][treatment_name]\n",
+    "treat_val = train_full[X_train_full.split.eq('valid')][treatment_name]\n",
     "\n",
     "# Two-Model подход: обучаем отдельные модели для treatment и control\n",
     "tm = TwoModels(\n",
@@ -4591,7 +4500,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "main-env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
