🟨feat: another update

--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "398f6e11-dbe0-4dba-89a5-dd12d9294bfe",
    "metadata": {},
    "outputs": [],
@@ -34,13 +34,6 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "from sklearn.linear_model import HuberRegressor\n",
-    "\n",
-    "from sklearn.experimental import enable_iterative_imputer\n",
-    "from sklearn.impute import IterativeImputer\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -924,13 +917,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "9f20ae04-3348-4cbb-9abe-2ed3cffaf1a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_full = pd.read_csv(os.path.join(DATA_PATH, 'uplift_train_preproc.csv'))\n",
-    "test_full = pd.read_csv(os.path.join(DATA_PATH, 'uplift_test_preproc.csv'))"
+    "train_full = pd.read_csv(os.path.join(DATA_PATH, 'train_full_preproc.csv'))\n",
+    "train_full.drop('split', axis=1, inplace=True)\n",
+    "test_full = pd.read_csv(os.path.join(DATA_PATH, 'test_full_preproc.csv'))"
    ]
   },
   {
