🟨feat: some fix in score

--- a/tree_benchmarks.ipynb
+++ b/tree_benchmarks.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "ff8f80d9-63f0-45f2-8d07-0121ec463e8d",
    "metadata": {},
    "outputs": [
@@ -418,27 +418,17 @@
       "=== Сравнение по метрикам uplift ===\n",
       "Наш RF — Qini AUC: 0.0170\n",
       "econml — Qini AUC: 0.0229\n",
-      "causalnml — Qini AUC: -0.2065\n",
+      "causalnml — Qini AUC: 0.0151\n",
       "\n",
       "Uplift@30%:\n",
       "Наш RF: 0.0641\n",
       "econml: 0.0670\n",
-      "causalml: nan\n",
+      "causalml: 0.0566\n",
       "\n",
       "Средний uplift:\n",
       "Наш RF: 0.0639\n",
       "econml: 0.0627\n",
       "causalml: 0.0625\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/romanseleznyov/Documents/UpliftNinja/uplift-env/lib/python3.13/site-packages/sklift/metrics/metrics.py:471: RuntimeWarning: Mean of empty slice.\n",
-      "  score_ctrl = y_true[order][treatment[order] == 0][:n_ctrl].mean()\n",
-      "/Users/romanseleznyov/Documents/UpliftNinja/uplift-env/lib/python3.13/site-packages/numpy/_core/_methods.py:144: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
      ]
     }
    ],
@@ -448,12 +438,12 @@
     "print(\"=== Сравнение по метрикам uplift ===\")\n",
     "print(f\"Наш RF — Qini AUC: {qini_auc_score(y_test, pred_our_rf, w_test):.4f}\")\n",
     "print(f\"econml — Qini AUC: {qini_auc_score(y_test, pred_econml_rf, w_test):.4f}\")\n",
-    "print(f\"causalnml — Qini AUC: {qini_auc_score(y_test_np, pred_causalml, w_test):.4f}\")\n",
+    "print(f\"causalnml — Qini AUC: {qini_auc_score(y_test_np, pred_causalml.flatten(), w_test):.4f}\")\n",
     "\n",
     "print(f\"\\nUplift@30%:\")\n",
     "print(f\"Наш RF: {uplift_at_k(y_test, pred_our_rf, w_test, strategy='by_group', k=0.3):.4f}\")\n",
     "print(f\"econml: {uplift_at_k(y_test, pred_econml_rf, w_test, strategy='by_group', k=0.3):.4f}\")\n",
-    "print(f\"causalml: {uplift_at_k(y_test_np, pred_causalml, w_test, strategy='by_group', k=0.3):.4f}\")\n",
+    "print(f\"causalml: {uplift_at_k(y_test_np, pred_causalml.flatten(), w_test, strategy='by_group', k=0.3):.4f}\")\n",
     "\n",
     "print(f\"\\nСредний uplift:\")\n",
     "print(f\"Наш RF: {pred_our_rf.mean():.4f}\")\n",
